--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.3.1",
     "react": "^18.3.1",
     "react-card-flip": "^1.2.3",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "sass": "^1.80.4",
