--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.115",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-card-flip": "^1.2.3",
     "react-countdown": "^2.3.6",
@@ -20,6 +21,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.80.4",
     "typescript": "^4.9.5",
+    "uuid": "^11.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
