new highscore styling

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "start": "NODE_ENV='development' react-scripts start",
+    "start2": "NODE_ENV='production' react-scripts start",
     "build": "NODE_ENV='production' BUILD_PATH='./html' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
