--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-card-flip": "^1.2.3",
     "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "sass": "^1.80.4",
     "typescript": "^4.9.5",
