--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
+    "html2canvas": "^1.4.1",
     "react": "^18.3.1",
     "react-card-flip": "^1.2.3",
     "react-countdown": "^2.3.6",
